removing code smells